backend-deploy-phase0.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-backend-service
spec:
  type: NodePort
  selector:
    app: inventory
    tier: backend
  ports:
    - port: 8080
      targetPort: 8080        
        
---
 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory
      tier: backend
  template:
    metadata:
      labels:
        app: inventory
        tier: backend
    spec:
      containers:
      - name: java-app
        image: inventory-project-backend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
