frontend-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-frontend-service
spec:
  type: ClusterIP
  selector:
    app: inventory-frontend
  ports:
  - port: 3000
    targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-frontend-app
spec:
  selector:
    matchLabels:
      app: inventory-frontend
  template:
    metadata:
      labels:
        app: inventory-frontend
    spec:
      containers:
      - name: frontend-app
        image: inventory-project-frontend:v3
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
