postgres-phase0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-volume
          mountPath: /var/lib/postgresql
      volumes:
      - name: postgres-volume
        persistentVolumeClaim:
          claimName: postgres-pvc
      

---
apiVersion: v1
kind: Service
metadata:
  # TODO: וודאו שהשם הזה תואם בדיוק ל-DB_HOST שנתתם ב-Backend!
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
