ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: inventory-frontend-service
            port:
              number: 3000

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: inventory-backend-service
            port:
              number: 8080
